<resources>
	<string name="app_name" translatable="false">Traditional T9</string>
	<string name="app_name_short" translatable="false">TT9</string>
	<string name="dictionary_url" translatable="false">https://raw.githubusercontent.com/sspanak/tt9/%1$s/downloads/%2$s</string>
	<string name="system_night_mode" translatable="false">n</string>
	<string name="app_settings">TT9 Settings</string>
	<string name="click_here_for_preview">Click here for preview</string>
	<string name="completed">Completed</string>
	<string name="delete">Delete</string>
	<string name="english_only" translatable="false">English only</string>
	<string name="language">Language</string>
	<string name="list_item_none" translatable="false">--</string>
	<string name="loading">Loading…</string>
	<string name="search_results">Search Results</string>
	<string name="search_results_void">No results.</string>
	<string name="version_info">%1$s\nMade by Dimo Karaivanov, and contributors from all over the world.</string>
	<string name="error_unexpected">Unexpected error occurred.</string>
	<string name="accessibility_key_left">Left Arrow</string>
	<string name="accessibility_key_right">Right Arrow</string>
	<string name="accessibility_mode_123">numbers</string>
	<string name="accessibility_mode_predictive">%1$s - predictive</string>
	<string name="accessibility_mode_recomposing">Edit word: "%1$s"</string>
	<string name="accessibility_text_case_lower">lowercase</string>
	<string name="accessibility_text_case_upper">uppercase</string>
	<string name="accessibility_text_case_capital">capitalize first letter</string>
	<string name="add_word_add">Add</string>
	<string name="add_word_confirm">Add word \"%1$s\" to %2$s?</string>
	<string name="add_word_no_confirmation">Add Without Confirmation</string>
	<string name="add_word_no_selection">Move the cursor inside a word to add it.</string>
	<string name="add_word_not_available_in_language">Adding words is not possible in this language.</string>
	<string name="add_word_blank">Blank word not added.</string>
	<string name="add_word_exist">Word \"%1$s\" is already in the dictionary.</string>
	<string name="add_word_invalid_language" translatable="false">Cannot add a word when no language is selected.</string>
	<string name="add_word_success">\"%1$s\" added.</string>
	<string name="add_word_title">Add Word</string>
	<string name="edit_word_invalid_characters">Can not edit \"%1$s\" when language is \"%2$s\".</string>
	<string name="edit_word_not_available_in_language">Editing words is not possible in this language.</string>
	<string name="edit_word_no_selection">Move the cursor inside a word to edit it.</string>
	<string name="commands_clipboard_is_empty">Clipboard is empty.</string>
	<string name="commands_select_command">Select a Command</string>
	<string name="pref_category_about">About</string>
	<string name="pref_category_abc_mode">ABC Mode</string>
	<string name="pref_category_appearance">Appearance</string>
	<string name="pref_category_colors">Colors</string>
	<string name="pref_category_custom_words">Added Words</string>
	<string name="pref_category_geometry">Geometry</string>
	<string name="pref_category_debug_options" translatable="false">Debug Options</string>
	<string name="pref_category_delete_words">Delete Added Words</string>
	<string name="pref_category_function_keys">Select Hotkeys</string>
	<string name="pref_category_fn_key_order">Function Key Order</string>
	<string name="pref_category_hacks">Compatibility</string>
	<string name="pref_category_key_appearance">Keys</string>
	<string name="pref_category_key_chars">Key Characters</string>
	<string name="pref_category_key_chars_summary">Add extra letters to the 2–9 keys. Reorder, add, and remove special characters on the 0 and 1 keys.</string>
	<string name="pref_category_keypad">Keypad</string>
	<string name="pref_category_keypad_hardware">Physical Keys</string>
	<string name="pref_category_keypad_onscreen">On-Screen Keys</string>
	<string name="pref_category_layout">On-screen Layout</string>
	<string name="pref_category_predictive_mode">Predictive Mode</string>
	<string name="pref_category_setup">Initial Setup</string>
	<string name="pref_category_typing">Typing</string>
	<string name="pref_category_unfolded_appearance">Unfolded Appearance</string>
	<string name="pref_category_unfolded_appearance_summary">Configure the appearance when the device is opened.</string>
	<string name="pref_category_usage_stats" translatable="false">Usage Stats</string>
	<string name="pref_abc_auto_accept">Automatic Letter Selection</string>
	<string name="pref_abc_auto_accept_off">Off</string>
	<string name="pref_abc_auto_accept_fastest">Very Quick</string>
	<string name="pref_abc_auto_accept_fast">Quick</string>
	<string name="pref_abc_auto_accept_normal">Moderate</string>
	<string name="pref_abc_auto_accept_slow">Slow</string>
	<string name="pref_allow_composing_text">Show Composing Text</string>
	<string name="pref_allow_composing_text_summary">Show words in text fields while typing. When disabled, words are shown only after pressing OK or Space.</string>
	<string name="pref_alternative_suggestion_scrolling">Alternative Suggestion Scrolling Method</string>
	<string name="pref_alternative_suggestion_scrolling_summary">Enable if sometimes you can not see all suggestions or have trouble scrolling them.</string>
	<string name="pref_arrows_left_right">Left/Right Arrows</string>
	<string name="pref_arrows_left_right_summary">Show left/right arrow keys for scrolling the suggestions or moving the text cursor horizontally.</string>
	<string name="pref_arrows_up_down">Up/Down Arrows</string>
	<string name="pref_arrows_up_down_summary">Allow swiping the OK key up/down to filter suggestions or move the text cursor vertically.</string>
	<string name="pref_auto_capitals_after_newline">Automatically Capitalize Every Line</string>
	<string name="pref_auto_capitals_after_newline_summary">Start every line with a capital letter, even if it is in the middle of a sentence.</string>
	<string name="pref_auto_mind_reading">Mind Reading</string>
	<string name="pref_auto_mind_reading_summary">Configure next-word predictions. (On low-end devices, this function may cause typing lag and may drain the battery faster)</string>
	<string name="pref_auto_mind_reading_guess">Next-Word Predictions</string>
	<string name="pref_auto_mind_reading_guess_summary">Show next-word predictions before you start typing. (Not available in all languages)</string>
	<string name="pref_auto_mind_reading_complete">Autocomplete</string>
	<string name="pref_auto_mind_reading_complete_summary">Show word completions after you type the first letter. (Not available in all languages)</string>
	<string name="pref_pref_auto_mind_reading_in_all_fields">Enable in All Text Fields</string>
	<string name="pref_pref_auto_mind_reading_in_all_fields_summary">Some apps may request no word predictions in specific text fields. This option ignores such app requests, and enables predictions in all text fields.</string>
	<string name="pref_auto_mind_reading_sort_predictions_last">Show Auto-Completions Last</string>
	<string name="pref_auto_mind_reading_sort_predictions_last_summary_on">Show the possible completions at the end of the suggestion list.</string>
	<string name="pref_auto_mind_reading_sort_predictions_last_summary_off">Show the most probable completions at the beginning of the suggestion list.</string>
	<string name="pref_auto_space">Automatic Space</string>
	<string name="pref_auto_space_summary">Automatically add a space after punctuation or words.</string>
	<string name="pref_auto_text_case">Automatic Capitalization</string>
	<string name="pref_auto_text_case_summary">Automatically start sentences with a capital letter. (Not possible in all languages)</string>
	<string name="pref_auto_trim_trailing_space">Automatically Trim Trailing Whitespace</string>
	<string name="pref_auto_trim_trailing_space_summary">Automatically remove extra spaces when moving the cursor back.</string>
	<string name="pref_backspace_acceleration">Fast Delete</string>
	<string name="pref_backspace_acceleration_summary">Erase entire words by holding or swiping Backspace. (Not supported in some apps)</string>
	<string name="pref_backspace_recomposing">Word Re-Composition</string>
	<string name="pref_backspace_recomposing_summary">Press Backspace at word end to edit the word. (Not possible in some apps and with mixed-language text)</string>
	<string name="pref_choose_languages">Languages</string>
	<string name="pref_bottom_padding_portrait">Space Below (Portrait)</string>
	<string name="pref_drag_resize">Drag to Resize</string>
	<string name="pref_double_zero_char">Character for Double 0-key Press</string>
	<string name="pref_numpad_fn_key_width">Letter Keys Width</string>
	<string name="pref_font_size">Settings Font Size</string>
	<string name="pref_hack_always_on_top">Always on Top</string>
	<string name="pref_help">Help</string>
	<string name="pref_layout">Layout Type</string>
	<string name="pref_layout_numpad">Virtual numpad (modern)</string>
	<string name="pref_numpad_alignment">Alignment</string>
	<string name="pref_numpad_key_font_size">Key Font Size</string>
	<string name="pref_numpad_key_height">Height</string>
	<string name="pref_numpad_width">Width</string>
	<string name="pref_one_key_emoji">Emojis on 1-key</string>
	<string name="pref_predict_word_pairs">Learn Word Pairs</string>
	<string name="pref_predict_word_pairs_summary">Remember commonly used phrases to improve the suggestions accuracy.</string>
	<string name="pref_privacy_policy">Privacy Policy</string>
	<string name="pref_show_suggestions_abc">Show Letter Suggestions</string>
	<string name="pref_show_suggestions_abc_summary">Show possible letters in the suggestion bar when a key is pressed.</string>
	<string name="pref_status_icon">Status Icon</string>
	<string name="pref_status_icon_summary">Show an icon when keyboard input is active.</string>
	<string name="pref_suggestion_font_size">Suggestion Font Size</string>
	<string name="pref_upside_down_keys">Reverse Key Order</string>
	<string name="pref_upside_down_keys_summary">For computer numpads with 7–8–9 on the first row, instead of 1–2–3.</string>
	<string name="dictionary_load_title">Load Selected</string>
	<string name="dictionary_truncate_title">Delete All</string>
	<string name="dictionary_truncate_unselected">Delete Unselected</string>
	<string name="dictionary_export">Export Selected</string>
	<string name="dictionary_export_custom_words">Export</string>
	<string name="delete_words_link_summary">Find and delete misspelled or unneeded words.</string>
	<string name="donate_title">Donate</string>
	<string name="key_chars_restore_default_for">Restore default characters for %1$s</string>
	<string name="key_chars_save">Save Characters for %1$s</string>
	<string name="key_chars_key_0">Key #0</string>
	<string name="key_chars_include_newline">Include Newline</string>
	<string name="key_chars_include_tab">Include Tab</string>
	<string name="key_chars_whitespace_will_be_added_automatically">Space character will be automatically added at the beginning of the list.</string>
	<string name="key_chars_key_1">Key #1</string>
	<string name="key_chars_initial_chars">Initial characters</string>
	<string name="key_chars_group">Grouped characters (optional)</string>
	<string name="key_chars_after_group">After the group (optional)</string>
	<string name="key_chars_key_2_9">Keys #2–#9</string>
	<string name="tutorial_close">Got it!</string>
	<string name="tutorial_classic_OK_swipe">When no suggestions, swipe up/down to move the cursor.\n\nWhen there are suggestions, swipe up to filter them, or swipe down to clear the filter.</string>
	<string name="tutorial_classic_add_word">Swipe left to add a word.</string>
	<string name="tutorial_classic_voice_input">Swipe right to activate voice input.</string>
</resources>