<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"  app:orderingFromXml="true">

	<DropDownPreference
		app:defaultValue="-1"
		app:key="pref_theme"
		app:title="@string/pref_dark_theme" />

	<DropDownPreference
		app:key="pref_font_size"
		app:title="@string/pref_font_size" />

	<DropDownPreference
		app:key="pref_layout_type"
		app:title="@string/pref_layout" />

	<PreferenceCategory app:title="@string/pref_layout_numpad">
		<DropDownPreference
			app:key="pref_numpad_key_height"
			app:title="@string/pref_numpad_key_height" />

		<DropDownPreference
			app:key="pref_numpad_width"
			app:title="@string/pref_numpad_width" />

		<DropDownPreference
			app:key="pref_numpad_alignment"
			app:title="@string/pref_numpad_alignment" />
	</PreferenceCategory>

	<PreferenceCategory app:title="@string/pref_category_hacks">

		<SwitchPreferenceCompat
			app:key="pref_alternative_suggestion_scrolling"
			app:title="@string/pref_alternative_suggestion_scrolling"
			app:summary="@string/pref_alternative_suggestion_scrolling_summary"/>

		<SwitchPreferenceCompat
			app:key="pref_clear_insets"
			app:title="@string/pref_hack_always_on_top" />

		<SwitchPreferenceCompat
			app:key="pref_status_icon"
			app:title="@string/pref_status_icon"
			app:summary="@string/pref_status_icon_summary" />

	</PreferenceCategory>

</PreferenceScreen>
