<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	app:orderingFromXml="true">

	<Preference
		app:fragment="io.github.sspanak.tt9.preferences.HotkeysScreen"
		app:key="screen_hotkeys"
		app:title="@string/pref_category_function_keys" />

	<SwitchPreferenceCompat
		app:defaultValue="false"
		app:key="pref_upside_down_keys"
		app:summary="@string/pref_upside_down_keys_summary"
		app:title="@string/pref_upside_down_keys" />

	<PreferenceCategory
		android:title="@string/pref_category_predictive_mode"
		app:singleLineTitle="true">

		<SwitchPreferenceCompat
			app:defaultValue="true"
			app:key="auto_space"
			app:title="@string/pref_auto_space"
			app:summary="@string/pref_auto_space_summary" />

		<SwitchPreferenceCompat
			app:defaultValue="true"
			app:key="auto_text_case"
			app:summary="@string/pref_auto_text_case_summary"
			app:title="@string/pref_auto_text_case" />

		<SwitchPreferenceCompat
			app:defaultValue="false"
			app:dependency="auto_text_case"
			app:key="auto_capitals_after_newline"
			app:summary="@string/pref_auto_capitals_after_newline_summary"
			app:title="@string/pref_auto_capitals_after_newline" />


		<DropDownPreference
			app:defaultValue="."
			app:key="pref_double_zero_char"
			app:title="@string/pref_double_zero_char" />

	</PreferenceCategory>


	<PreferenceCategory
		android:title="@string/pref_category_abc_mode"
		app:singleLineTitle="true">

		<DropDownPreference
			app:defaultValue="800"
			app:key="pref_abc_auto_accept_time"
			app:title="@string/pref_abc_auto_accept" />
	</PreferenceCategory>

</PreferenceScreen>
