<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
	<io.github.sspanak.tt9.preferences.screens.modeAbc.DropDownAbcAutoAcceptTime android:title="@string/pref_abc_auto_accept" />

	<SwitchPreferenceCompat
		android:defaultValue="true"
		android:key="auto_space_abc_v2"
		android:summary="@string/pref_auto_space_summary"
		android:title="@string/pref_auto_space" />

	<SwitchPreferenceCompat
		android:defaultValue="true"
		android:key="auto_text_case_abc_v2"
		android:summary="@string/pref_auto_text_case_summary"
		android:title="@string/pref_auto_text_case" />

	<SwitchPreferenceCompat
		android:defaultValue="false"
		android:key="show_suggestions_abc"
		android:summary="@string/pref_show_suggestions_abc_summary"
		android:title="@string/pref_show_suggestions_abc" />
</androidx.preference.PreferenceScreen>
