<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto" app:orderingFromXml="true">

	<MultiSelectListPreference
		app:key="pref_languages"
		app:title="@string/pref_choose_languages" />

	<SwitchPreferenceCompat
		app:isPreferenceVisible="false"
		app:key="dictionary_notifications"
		app:title="@string/dictionary_no_notifications"
		app:summary="@string/dictionary_no_notifications_summary"/>

	<Preference
		app:key="dictionary_load"
		app:title="@string/dictionary_load_title" />

	<Preference
		app:key="dictionary_export"
		app:title="@string/dictionary_export"
		app:isPreferenceVisible="false" />

	<Preference
		app:key="dictionary_truncate_unselected"
		app:title="@string/dictionary_truncate_unselected" />

	<Preference
		app:key="dictionary_truncate"
		app:title="@string/dictionary_truncate_title" />

	<PreferenceCategory
		app:title="@string/pref_category_custom_words"
		app:singleLineTitle="true">

		<SwitchPreferenceCompat
			app:key="add_word_no_confirmation"
			app:title="@string/add_word_no_confirmation" />

		<Preference
			app:key="dictionary_export_custom"
			app:title="@string/dictionary_export_custom_words" />

		<Preference
			app:fragment="io.github.sspanak.tt9.preferences.DeleteWordsScreen"
			app:key="screen_delete_words"
			app:title="@string/delete_words_delete"
			app:summary="@string/delete_words_link_summary"/>

	</PreferenceCategory>

</PreferenceScreen>
