<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	app:orderingFromXml="true">

	<Preference
		app:key="screen_help"
		app:title="@string/pref_help">
		<intent
			android:action="android.intent.action.VIEW"
			android:targetPackage="io.github.sspanak.tt9"
			android:targetClass="io.github.sspanak.tt9.preferences.HelpActivity" />
	</Preference>

	<Preference
		app:fragment="io.github.sspanak.tt9.preferences.AppearanceScreen"
		app:key="screen_appearance"
		app:title="@string/pref_category_appearance" />

	<Preference
		app:fragment="io.github.sspanak.tt9.preferences.LanguagesScreen"
		app:key="screen_languages"
		app:title="@string/pref_choose_languages" />

	<Preference
		app:fragment="io.github.sspanak.tt9.preferences.KeyPadScreen"
		app:key="screen_keypad"
		app:title="@string/pref_category_keypad" />

	<Preference
		app:fragment="io.github.sspanak.tt9.preferences.SetupScreen"
		app:key="screen_setup"
		app:title="@string/pref_category_setup" />

	<PreferenceCategory
		android:title="@string/pref_category_about"
		app:singleLineTitle="true">

		<io.github.sspanak.tt9.preferences.screens.main.DonatePreference
			app:key="donate_link"
			app:title="@string/donate_title"
			app:isPreferenceVisible="false" />

		<Preference
			app:key="screen_privacy_policy"
			app:title="@string/pref_privacy_policy"
			app:summary="@string/english_only">
			<intent
				android:action="android.intent.action.VIEW"
				android:targetPackage="io.github.sspanak.tt9"
				android:targetClass="io.github.sspanak.tt9.preferences.PrivacyPolicyActivity" />
		</Preference>

		<Preference
			app:key="version_info"
			app:title="@string/app_name" />

	</PreferenceCategory>

</PreferenceScreen>
